[package]
name = "agent"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.92"
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
prost = "0.13.3"
prost-types = "0.13.3"
serde = { version = "1.0.214", features = ["derive"] }
signal-hook = "0.3.17"
tonic = "0.12.3"
trident = "0.2.1"

[build-dependencies]
tonic-build = "0.8.0"
